fix: title align

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ body {
 
 .App-body {
   height: auto;
+  min-height: 90vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
@@ -78,7 +79,7 @@ body {
   padding: 5% 5%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   text-align: center;
 }
